test/expected/declare_hv.out
declare x as short void
        ^
9: error: "short void" is illegal for built-in type
